# medialive-inference

./: .gitignore  README.md  app.py  build-lambda.sh  main.py  pyproject.toml  requirements.txt
cmaf-test/: README.md
lambda/event_logger/: Cargo.toml
lambda/event_logger/src/: main.rs
stacks/: __init__.py  event_processing_stack.py  inference_stack.py  medialive_stack.py  storage_stack.py
tools/inference-ingest/: Cargo.toml
tools/inference-ingest/src/: main.rs
tools/inference-metadata/: Cargo.toml
tools/inference-metadata/src/: main.rs
