[package]
name = "inference-metadata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inference-metadata"
path = "src/main.rs"

[dependencies]
aws-config = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sigv4 = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
